internal/kgateway/agentgatewaysyncer/testdata/outputs/serviceentry/basic-serviceentry.yaml
Addresses:
- service:
    hostname: external.example.com
    name: external-service
    namespace: default
    ports:
    - appProtocol: HTTP11
      servicePort: 8080
      targetPort: 8080
- workload:
    canonicalName: external-service
    canonicalRevision: latest
    clusterId: Kubernetes
    hostname: external-backend.example.com
    name: external-service
    namespace: default
    services:
      default/external.example.com:
        ports:
        - servicePort: 8080
          targetPort: 8080
    uid: Kubernetes//ServiceEntry/default/external-service/external-backend.example.com
    workloadName: external-service
    workloadType: POD
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      port: 8080
      service: default/external.example.com
    weight: 1
  hostnames:
  - external.example.com
  key: default/external-service-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/external-service-route
